# plant-classification

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
flower_images/: labels.csv
plant_classification/: imageloader.py  utils.py
tests/: test_image_loader.py
